board/m2k/msd/img/index_fr|es.html: Fix download link
Signed-off-by: Michael Hennerich <michael.hennerich@analog.com>

--- a/board/m2k/msd/img/index_fr.html
+++ b/board/m2k/msd/img/index_fr.html
@@ -79,7 +79,7 @@ Ce micrologiciel possède un numéro de version qui l'identifie. Pour des inform
 <div id="versionsection" class="download">
 <p><strong>État du micrologiciel du M2k:</strong></p>
 <p><span id="versiontest">JavaScript est nécessaire à la vérification. Oops.</span></p>
-<p><a id="plutsdr-fw-download" class="button" href="https://github.com/analogdevicesinc/plutosdr-fw/releases/latest">Obtenir la dernière version</a>
+<p><a id="m2k-fw-download" class="button" href="https://github.com/analogdevicesinc/m2k-fw/releases/latest">Obtenir la dernière version</a>
 </div>
 <br>
 <p id="version"><strong>Information de version:</strong></p>
@@ -131,7 +131,7 @@ Ce micrologiciel possède un numéro de version qui l'identifie. Pour des inform
 <td>#HOSTNAME#</td>
 </tr>
 <tr>
-<td>Adresse IP (PLUTO)</td>
+<td>Adresse IP (M2k)</td>
 <td>#IP#</td>
 </tr>
 <tr>
@@ -143,7 +143,7 @@ Ce micrologiciel possède un numéro de version qui l'identifie. Pour des inform
 <td>#NETMASK#</td>
 </tr>
 <tr>
-<td>Adresse MAC (PLUTO)</td>
+<td>Adresse MAC (M2k)</td>
 <td>#MAC#</td>
 </tr>
 <tr>
