html doc pages: add link to license at top, and fix locations of files 	 which don't have translations yet.
Signed-off-by: Robin Getz <robin.getz@analog.com>

--- a/board/pluto/msd/img/index_es.html
+++ b/board/pluto/msd/img/index_es.html
@@ -29,9 +29,9 @@
 <a href="./index_fr.html" title="Français (French)">Français</a> |
 <a href="#" title="Español (Spanish)">Español</a> |
 <a href="./index_br.html" title="Português (Portuguese)">Português</a> |
-<a href="./image/index_cn.html" title="简体中文 (Chinese)">简体中文</a> |
-<a href="./image/index_jp.html" title="日本語 (Japanese)">日本語</a> |
-<a href="./image/index_ru.html" title="Руccкий (Russian)">Руccкий</a>
+<a href="./index_cn.html" title="简体中文 (Chinese)">简体中文</a> |
+<a href="./index_jp.html" title="日本語 (Japanese)">日本語</a> |
+<a href="./index_ru.html" title="Руccкий (Russian)">Руccкий</a>
 </div>
 </header>
 
@@ -41,6 +41,7 @@
 <a class="button" href="#version">Version</a>
 <a class="button" href="#settings">Ajustes</a>
 <a class="button" href="#support">Ayuda y soporte</a>
+<a class="button" href="../LICENSE.html">Licencia de software</a>
 <a class="button" href="#about">Acerca</a>
 </nav>
 <hr>
