--- a/board/pluto/msd/index.html
+++ b/board/pluto/msd/index.html
@@ -29,9 +29,9 @@
 <a href="./img/index_fr.html" title="Français (French)">Français</a> |
 <a href="./img/index_es.html" title="Español (Spanish)">Español</a> |
 <a href="./img/index_br.html" title="Português (Portuguese)">Português</a> |
-<a href="./image/index_cn.html" title="简体中文 (Chinese)">简体中文</a> |
-<a href="./image/index_jp.html" title="日本語 (Japanese)">日本語</a> |
-<a href="./image/index_ru.html" title="Руccкий (Russian)">Руccкий</a>
+<a href="./img/index_cn.html" title="简体中文 (Chinese)">简体中文</a> |
+<a href="./img/index_jp.html" title="日本語 (Japanese)">日本語</a> |
+<a href="./img/index_ru.html" title="Руccкий (Russian)">Руccкий</a>
 </div>
 </header>
 
@@ -41,6 +41,7 @@
 <a class="button" href="#version">Version</a>
 <a class="button" href="#settings">Settings</a>
 <a class="button" href="#support">Help and Support</a>
+<a class="button" href="LICENSE.html">License</a>
 <a class="button" href="#about">About Analog Devices</a>
 </nav>
 <hr>
